--- a/render.yaml
+++ b/render.yaml
@@ -4,14 +4,10 @@ services:
     env: docker
     plan: free
     envVars:
-      - key: DB_HOST
-        sync: false
-      - key: DB_USERNAME
-        sync: false
-      - key: DB_PASSWORD
-        sync: false
-      - key: DB_NAME
-        value: swapit_db
+      - key: DATABASE_URL
+        fromDatabase:
+          name: swapit-db
+          property: connectionString
       - key: GOOGLE_CLIENT_ID
         sync: false
       - key: GOOGLE_CLIENT_SECRET
@@ -21,6 +17,6 @@ services:
 
 databases:
   - name: swapit-db
-    databaseName: swapit_db
+    databaseName: swapit_db_99av
     user: swapit_user
     plan: free
