--- a/render.yaml
+++ b/render.yaml
@@ -4,19 +4,19 @@ services:
     env: docker
     plan: free
     envVars:
-      - key: DATABASE_URL
-        fromDatabase:
-          name: swapit-db
-          property: connectionString
+      - key: DB_HOST
+        sync: false
+      - key: DB_PORT
+        sync: false
+      - key: DB_NAME
+        sync: false
+      - key: DB_USER
+        sync: false
+      - key: DB_PASSWORD
+        sync: false
       - key: GOOGLE_CLIENT_ID
         sync: false
       - key: GOOGLE_CLIENT_SECRET
         sync: false
       - key: GOOGLE_REDIRECT_URI
         sync: false
-
-databases:
-  - name: swapit-db
-    databaseName: swapit_db_99av
-    user: swapit_user
-    plan: free
